--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "xlsx": "^0.18.5"
   }
 }
